--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 21
     buildToolsVersion '25.0.0'
     defaultConfig {
-        applicationId 'baiya.flashlight'
+        applicationId 'com.bolt2017.init'
         minSdkVersion 15
         targetSdkVersion 19
         versionCode 1
